# GNearbyLib

./: GNearbyLib.sln  README.md
GNearbyConsoleApp/: GNearbyConsoleApp.cpp  GNearbyConsoleApp.vcxproj  GNearbyConsoleApp.vcxproj.filters
GNearbyDll/: GNearbyDll.vcxproj  GNearbyDll.vcxproj.filters  core_adapter_new.cpp  core_adapter_new.h  framework.h
GNearbyLib/: GNearbyLib.cpp  GNearbyLib.h  GNearbyLib.sln  GNearbyLib.vcxproj  GNearbyLib.vcxproj.filters  core.cc
GNearbyLib/connections/: core.h
GNearbyLib/connections/implementation/: CMakeLists.txt
GNearbyLib/connections/implementation/analytics/: CMakeLists.txt
GNearbyLib/connections/implementation/flags/: CMakeLists.txt
GNearbyLib/connections/implementation/mediums/: CMakeLists.txt
GNearbyLib/connections/implementation/mediums/ble_v2/: CMakeLists.txt
GNearbyLib/connections/implementation/mediums/webrtc/: CMakeLists.txt
GNearbyLib/connections/implementation/proto/: CMakeLists.txt
GNearbyLib/connections/v3/: CMakeLists.txt
GNearbyLib/internal/analytics/: CMakeLists.txt
GNearbyLib/internal/base/: CMakeLists.txt
GNearbyLib/internal/crypto/: CMakeLists.txt
GNearbyLib/internal/crypto_cros/: CMakeLists.txt
GNearbyLib/internal/flags/: CMakeLists.txt
GNearbyLib/internal/interop/: CMakeLists.txt
GNearbyLib/internal/network/: CMakeLists.txt
GNearbyLib/internal/platform/: CMakeLists.txt  cancellation_flag.h
GNearbyLib/internal/platform/flags/: CMakeLists.txt
GNearbyLib/internal/platform/implementation/: CMakeLists.txt
GNearbyLib/internal/platform/implementation/linux/: CMakeLists.txt  bluetooth_classic_device.h  bluetooth_classic_socket.h  bluez.h  dbus.h  device_info.h  preferences_repository.h  stream.h  test_utils.cc  thread_pool.h  utils.h
GNearbyLib/internal/platform/implementation/shared/: CMakeLists.txt
GNearbyLib/internal/platform/implementation/windows/: bluetooth_adapter.cc  bluetooth_classic_device.cc  bluetooth_classic_device.h  bluetooth_classic_medium.cc  bluetooth_classic_medium.h  bluetooth_classic_medium_test.cc  bluetooth_pairing.cc  log_message.cc  platform.cc  utils.cc  webrtc.h  wifi_direct.h  wifi_direct_server_socket.cc  wifi_hotspot.h  wifi_hotspot_server_socket.cc  wifi_lan.h  wifi_lan_medium.cc  wifi_lan_server_socket.cc
GNearbyLib/internal/proto/: CMakeLists.txt
GNearbyLib/internal/proto/analytics/: CMakeLists.txt  fast_pair_log.proto
GNearbyLib/internal/test/: CMakeLists.txt
GNearbyLib/internal/weave/: CMakeLists.txt
GNearbyLib/internal/weave/sockets/: CMakeLists.txt
